--- a/My_E-com/Dockerfile
+++ b/My_E-com/Dockerfile
@@ -22,7 +22,7 @@ FROM tomcat:9-jdk17-openjdk-slim AS deploy
 WORKDIR /usr/local/tomcat/webapps
 
 # Copy WAR file from build stage
-COPY --from=build /app/target/My_E-com.war ./ROOT.war
+COPY --from=build /app/target/My_E-com-0.0.1-SNAPSHOT.war ./ROOT.war
 
 # Run Tomcat
 CMD ["catalina.sh", "run"]
