--- a/My_E-com/Dockerfile
+++ b/My_E-com/Dockerfile
@@ -17,16 +17,11 @@ FROM tomcat:10-jdk17-openjdk-buster AS deploy
 # Copy the WAR file from the build stage to the Tomcat webapps directory
 COPY --from=build target/My_E-com-0.0.1-SNAPSHOT.war.original /usr/local/tomcat/webapps/ROOT.war
 
-# Optional: If you need to customize Tomcat server configurations, you can COPY them here
-# COPY path/to/local/server.xml /usr/local/tomcat/conf/
-COPY  data/mydatabase.mv.db data/mydatabase
-ENV SPRING_H2_CONSOLE_ENABLED=true
-ENV SPRING_SQL_INIT_PLATFORM=h2
-ENV SPRING_DATASOURCE_URL=jdbc:h2:file:/data/mydatabase
+ENV SPRING_DATASOURCE_URL=jdbc:mysql://127.0.0.1:3306/Shoemaker
+ENV SPRING_DATASOURCE_USERNAME=root
+ENV SPRING_DATASOURCE_PASSWORD=Aravind@123
 ENV SPRING_JPA_HIBERNATE_DDL_AUTO=update
 ENV SPRING_DATASOURCE_INITIALIZATION_MODE=always
-ENV SPRING_DATASOURCE_USERNAME=Ecom
-ENV SPRING_DATASOURCE_PASSWORD=123
 # Tomcat listens on port 8080
 EXPOSE 8080
 
