--- a/My_E-com/src/main/resources/application.properties
+++ b/My_E-com/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-spring.h2.console.enabled=true
-spring.sql.init.platform=h2
-spring.datasource.url=jdbc:h2:file:/data/mydatabase
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Shoemaker
+spring.datasource.username=root
+spring.datasource.password=Aravind@123
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.datasource.initialization-mode=always
-spring.datasource.username=Ecom
-spring.datasource.password=123
+server.port=8080
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
