--- a/My_E-com/pom.xml
+++ b/My_E-com/pom.xml
@@ -37,6 +37,14 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		 <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.28</version> <!-- Use the latest version -->
+    </dependency>
+   
+<!-- Hibernate MySQL Dialect -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
