--- a/My_E-com/src/main/resources/application.properties
+++ b/My_E-com/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Shoemaker
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shoemaker
 spring.datasource.username=root
 spring.datasource.password=Aravind@123
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Set maximum file size to 10MB
+spring.servlet.multipart.max-file-size=20MB
+
+# Set maximum request size to 20MB
+spring.servlet.multipart.max-request-size=30MB
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+server.port=8081
 
-spring.datasource.initialization-mode=always
-server.port=8080
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
