--- a/My_E-com/src/main/resources/application.properties
+++ b/My_E-com/src/main/resources/application.properties
@@ -1,12 +1,12 @@
+spring.datasource.url=jdbc:postgresql://dpg-co6eeg4f7o1s73di0rtg-a:5432/shoemaker
+spring.datasource.username=shoemaker
+spring.datasource.password=5yECvNMSfyZSbeaBseCDWB6IgN0eZ46G
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shoemaker
-spring.datasource.username=root
-spring.datasource.password=Aravind@123
 
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 
 # Set maximum file size to 10MB
 spring.servlet.multipart.max-file-size=20MB
