--- a/My_E-com/src/main/resources/application.properties
+++ b/My_E-com/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://dpg-co6eeg4f7o1s73di0rtg-a:5432/shoemaker
-spring.datasource.username=shoemaker
-spring.datasource.password=5yECvNMSfyZSbeaBseCDWB6IgN0eZ46G
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://dpg-co6eeg4f7o1s73di0rtg-a:5432/shoemaker
+#spring.datasource.username=shoemaker
+#spring.datasource.password=5yECvNMSfyZSbeaBseCDWB6IgN0eZ46G
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect 
 spring.jpa.hibernate.ddl-auto=update
 
 
