--- a/My_E-com/src/main/resources/application.properties
+++ b/My_E-com/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=shoemaker
 spring.datasource.password=5yECvNMSfyZSbeaBseCDWB6IgN0eZ46G
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect 
 spring.jpa.hibernate.ddl-auto=update
